--- a/Back/package.json
+++ b/Back/package.json
@@ -1,11 +1,10 @@
 {
   "name": "back",
   "version": "1.0.0",
-  "main": "Server.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
